--- a/config.json
+++ b/config.json
@@ -1,12 +1,2 @@
-{
-	"path": "C:/Users/Regg1e_/Documents/discord-chiaki-bot/",
-	"bot_token": "",
-	"log_location": "",
-	"reddit_client_id": "",
-	"reddit_client_secret": "",
-	"reddit_username": "",
-	"reddit_password": "",
-	"mal_username": "",
-	"mal_password": "",
-	"prefix": "*"
+{ "prefix": "*"
 }
